--- a/src/Components/Layout/style.scss
+++ b/src/Components/Layout/style.scss
@@ -16,7 +16,7 @@
                 background-color: #4880FF; // Change background color for active button
                 border-radius: 5px; // Round the corners of the button
                 color: #fff; // Change text color to white
-                transform: translateX(10px); // Shift the button slightly to the right
+                // transform: translateX(10px); // Shift the button slightly to the right
                 .iconStyle {
                     color: #fff; // Change icon color to white when active
                 }
