--- a/src/Components/EnergyDetail/style.scss
+++ b/src/Components/EnergyDetail/style.scss
@@ -45,7 +45,8 @@
 
         .productionDetailFilters {
             display: flex;
-
+            gap: 0.5rem;
+            
             .button {
                 padding: 0.5rem 1rem;
                 color: #fff;
