Updated functionality for Reacently Viewed and added multiple chart filters

--- a/src/Components/EnergyDetail/style.scss
+++ b/src/Components/EnergyDetail/style.scss
@@ -47,6 +47,18 @@
             display: flex;
             gap: 0.5rem;
             
+            .react-datepicker-wrapper {
+                height: 100%;
+                .react-datepicker__input-container {
+                    height: 100%;
+                    input {
+                        height: 100%;
+                        width: 100%;
+                        border: none;
+                    }
+                }
+            }
+
             .button {
                 padding: 0.5rem 1rem;
                 color: #fff;
@@ -87,7 +99,12 @@
                     height: 40px;
                     border: 1px solid #979797;
                     border-radius: 0;
+                    color: #000;
 
+                    &.active {
+                        background-color: #000;
+                        color: #fff;
+                    }
                     &.left {
                         border-top-left-radius: 10px;
                         border-bottom-left-radius: 10px;
