--- a/src/Components/Energy/style.scss
+++ b/src/Components/Energy/style.scss
@@ -1,3 +1,14 @@
+.loader {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    z-index: 100,
+}
 .energy {
     display: flex; // Flexbox layout for the main container
     flex-direction: column; // Stack children vertically
