--- a/src/Components/MachineUsage/style.scss
+++ b/src/Components/MachineUsage/style.scss
@@ -41,16 +41,16 @@
     }
 }
 
-.headerFilters {
-    // padding: 20px;
-    // background-color: #f9f9f9;
-    // border-radius: 8px;
-    // box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
+// .headerFilters {
+//     // padding: 20px;
+//     // background-color: #f9f9f9;
+//     // border-radius: 8px;
+//     // box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+// }
 
-.headerFilters .MuiFormControl-root {
-    // margin-bottom: 16px;
-}
+// .headerFilters .MuiFormControl-root {
+//     // margin-bottom: 16px;
+// }
 
 .headerFilters .MuiInputLabel-root {
     color: #2B3034;
